--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Application Canvas -->
     <canvas id="app"></canvas>
     <!-- this needs to be called here to ensure all elements are available -->
-    <script src="dist/main.js" type="application/javascript"></script>
+    <script src="webpack/main.js" type="application/javascript"></script>
 
 </body>
 
